--- a/discloud.config
+++ b/discloud.config
@@ -1,5 +1,4 @@
 # https://docs.discloudbot.com/discloud.config
-ID=
 TYPE=bot
 MAIN=main.py
 NAME=Elinium
@@ -7,6 +6,4 @@ AVATAR=
 RAM=100
 AUTORESTART=false
 VERSION=latest
-APT=
-BUILD=
-START=
+APT=tools 
