--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ env/
 warnings.json
 modlog_settings.json
 blacklists.json
+confession_channels.json
 
 # Operating System specific
 .DS_Store # macOS
